reports/Cap2_OneDimensionalBoxInteractive.log
Traceback (most recent call last):
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/jebarrios/anaconda3/envs/jbook/lib/python3.9/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
```{code-cell} ipython3
:tags: ["hide-input"]
print("This is a test.")
```
------------------

[0;36m  File [0;32m"/tmp/ipykernel_13152/3242299198.py"[0;36m, line [0;32m1[0m
[0;31m    ```{code-cell} ipython3[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3242299198.py, line 1)

